quarkus-demo/openshift/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quarkus-demo
  namespace: admin-admin
  labels:
    app: quarkus-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: quarkus-demo
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: quarkus-demo
    spec:
      containers:
      - name: quarkus-demo
        image: quay-registry-quay-quay.apps.cluster-kc4hf.dynamic.redhatworkshops.io/developer/quarkus-demo:bf82ff6070a2a8a7c35b7937b40b77cb80c38eb4_dev
        ports:
        - containerPort: 8080
        resources:
          limits:
            cpu: "500m"
            memory: "512Mi"
          requests:
            cpu: "250m"
            memory: "256Mi"
