quarkus-demo/openshift/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: quarkus-demo
  namespace: proyecto-user13
spec:
  type: ClusterIP
  selector:
    app: quarkus-demo
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
