quarkus-demo/openshift/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: quarkus-demo
  namespace: proyecto-user13
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: quarkus-demo
    weight: 100
